--- a/games/display.html
+++ b/games/display.html
@@ -10,7 +10,7 @@
 <meta name="apple-mobile-web-app-title" content="InfinityGamer">
 <meta name="application-name" content="InfinityGamer">
 <meta name="msapplication-TileColor" content="#2d89ef">
-<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml?v=4">
+<meta name="msapplication-confi" content="/assets/favicons/browserconfig.xml?v=4">
 <meta name="theme-color" content="#149cea">
 
     <title>InfinityGamer</title>
