--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <meta name="msapplication-config" content="/assets/favicons/browserconfig.xml?v=5">
 <meta name="theme-color" content="#114499">
 
-    <title>InfinityGamer</title>
+    <title>Ians big veiny ahh dih</title>
     <link rel="stylesheet" type="text/css" href="assets/css/global.css">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link rel="manifest" href="/manifest.json">
@@ -21,7 +21,7 @@
 </head>
 <body>
   <iframe src="assets/navbar.html" frameborder="0" scrolling="no" width="100%" height="100px"></iframe>
-  <h1>InfinityGamer</h1>
+  <h1>Infinitydiddigooner</h1>
   <div class="container">
       <p id="random-text">Loading...</p>
   </div>
